--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.14.0
 annotated-types==0.7.0
 async-timeout==5.0.1
 asyncpg==0.30.0
@@ -8,6 +9,7 @@ fastapi==0.115.5
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+Mako==1.3.6
 psycopg2-binary==2.9.10
 pydantic==2.9.2
 pydantic_core==2.23.4
