--- a/orders/requirements.txt
+++ b/orders/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.14.0
 annotated-types==0.7.0
 async-timeout==5.0.1
 asyncpg==0.30.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 databases==0.9.0
 exceptiongroup==1.2.2
@@ -10,12 +12,19 @@ greenlet==3.1.1
 h11==0.14.0
 idna==3.10
 Mako==1.3.6
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
 psycopg2-binary==2.9.10
 pydantic==2.9.2
 pydantic_core==2.23.4
+requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 SQLAlchemy-Utils==0.41.2
 starlette==0.41.2
+tomli==2.1.0
 typing_extensions==4.12.2
+urllib3==2.2.3
 uvicorn==0.32.0
