--- a/payments/Dockerfile
+++ b/payments/Dockerfile
@@ -5,4 +5,4 @@ COPY . /code/
 WORKDIR /code
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-CMD ["python", "main.py"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port". "8003"]
