--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,7 @@ services:
     restart: on-failure:3
     depends_on:
       - db
+      - redis
 
   products:
     build: products
@@ -61,6 +62,7 @@ services:
     restart: on-failure:3
     depends_on:
       - db
+      - redis
     
   orders:
     build: orders
@@ -76,17 +78,23 @@ services:
     restart: on-failure:3
     depends_on:
       - db
+      - redis
 
   payments:
     build: payments
     container_name: payments
     volumes:
       - ./payments:/code
+    ports:
+      - 8003:8003
     env_file:
       - .env
+    command: >
+      sh -c "uvicorn main:app --host 0.0.0.0 --port 8003 --reload"
     restart: on-failure:3
     depends_on:
       - db
+      - redis
    
 volumes:
   postgres_data:
