--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,16 +2,26 @@ version: "3"
 
 services:
 
-  db:
-    image: postgres:latest
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    expose:
-      - 5432
-    ports:
-      - 5432:5432
-    env_file:
-      .env
+  # db:
+  #   image: postgres:latest
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data/
+  #   expose:
+  #     - 5432
+  #   ports:
+  #     - 5432:5432
+  #   env_file:
+  #     .env
+
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   restart: always
+  #   env_file:
+  #     - .env
+  #   ports:
+  #     - 5050:80
+  #   depends_on:
+  #     - db
 
   redis:
     image: docker.io/bitnami/redis:latest
@@ -22,15 +32,6 @@ services:
     volumes:
       - redis_data:/bitnami/redis/data
 
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    env_file:
-      - .env
-    ports:
-      - 5050:80
-    depends_on:
-      - db
 
   api_server:
     build: api_server
@@ -45,7 +46,7 @@ services:
       sh -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     restart: on-failure:3
     depends_on:
-      - db
+      # - db
       - redis
 
   products:
@@ -61,7 +62,7 @@ services:
       sh -c "uvicorn main:app --host 0.0.0.0 --port 8001 --reload"
     restart: on-failure:3
     depends_on:
-      - db
+      # - db
       - redis
     
   orders:
@@ -77,7 +78,7 @@ services:
       sh -c "uvicorn main:app --host 0.0.0.0 --port 8002 --reload"
     restart: on-failure:3
     depends_on:
-      - db
+      # - db
       - redis
 
   payments:
@@ -93,11 +94,11 @@ services:
       sh -c "uvicorn main:app --host 0.0.0.0 --port 8003 --reload"
     restart: on-failure:3
     depends_on:
-      - db
+      # - db
       - redis
    
 volumes:
-  postgres_data:
-    driver: local
+  # postgres_data:
+  #   driver: local
   redis_data:
     driver: local
